--- a/AvalonTest/MainWindow.xaml
+++ b/AvalonTest/MainWindow.xaml
@@ -5,13 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AvalonTest"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+        Loaded="MainWindow_OnLoaded">
     <Grid>
         <avalonEdit:TextEditor Padding="20" Margin="20"
 
             xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
 
-            Name="avalon1"
+            Name="textEditor"
 
             FontFamily="Consolas"
 
